--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,6 +3,7 @@
     <head>
         <script type="text/javascript" src="/vendors/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="/assets/scripts/app.min.js"></script>
+        <link type="text/css" rel="stylesheet" href="/assets/styles/bootstrap/dist/css/bootstrap.min.css"/>
         <link type="text/css" rel="stylesheet" href="/assets/styles/styles.css"/>
     </head>
     <body>
