--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -7,13 +7,13 @@
         <link type="text/css" rel="stylesheet" href="/assets/styles/styles.css"/>
     </head>
     <body>
+        <header>Gamma Cohort Team Assigner</header>
         <div class="all-buttons">
             <div class="group-amount">
             </div>
-            <button id="randomizer" class="random-button">Make Groups</button>
+            <button id="randomizer" class="random-button btn btn-primary btn-lg raised">Make Groups</button>
         </div>
         <div class="display-groups">
-
         </div>
     </body>
 </html>
